// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Native <Box /> as prop when empty box created match snapshot 1`] = `
<View
  style={
    {
      "alignContent": "stretch",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 1,
      "position": "relative",
    }
  }
/>
`;

exports[`Native <Box /> base prop when Pressable box created match snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="component"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignContent": "stretch",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 1,
      "position": "relative",
    }
  }
/>
`;

exports[`Native <Box /> default style when styled box created match snapshot 1`] = `
<View
  style={
    {
      "alignContent": "stretch",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 1,
      "height": 300,
      "position": "relative",
      "width": 300,
    }
  }
/>
`;
